高清流畅 添加

--- a/app/scripts/views/biz/live_rooms/update.html
+++ b/app/scripts/views/biz/live_rooms/update.html
@@ -67,19 +67,19 @@
                         <div form-input text="FLV" ng-model="param.cloud.flv_url" placeholder="FLV"
                              required="true"></div>
 
-                        <!--<div form-input text="高清RTMP" ng-model="param.cloud.high_rtmp_url" placeholder="RTMP"-->
-                             <!--required="true"></div>-->
-                        <!--<div form-input text="高清HLS" ng-model="param.cloud.high_mu_url" placeholder="HLS(m3u8)"-->
-                             <!--required="true"></div>-->
-                        <!--<div form-input text="高清FLV" ng-model="param.cloud.high_flv_url" placeholder="FLV"-->
-                             <!--required="true"></div>-->
+                        <div form-input text="高清RTMP" ng-model="param.cloud.high_rtmp_url" placeholder="RTMP"
+                             required="true"></div>
+                        <div form-input text="高清HLS" ng-model="param.cloud.high_mu_url" placeholder="HLS(m3u8)"
+                             required="true"></div>
+                        <div form-input text="高清FLV" ng-model="param.cloud.high_flv_url" placeholder="FLV"
+                             required="true"></div>
 
-                        <!--<div form-input text="流畅RTMP" ng-model="param.cloud.fluency_rtmp_url" placeholder="RTMP"-->
-                             <!--required="true"></div>-->
-                        <!--<div form-input text="流畅HLS" ng-model="param.cloud.fluency_mu_url" placeholder="HLS(m3u8)"-->
-                             <!--required="true"></div>-->
-                        <!--<div form-input text="流畅FLV" ng-model="param.cloud.fluency_flv_url" placeholder="FLV"-->
-                             <!--required="true"></div>-->
+                        <div form-input text="流畅RTMP" ng-model="param.cloud.fluency_rtmp_url" placeholder="RTMP"
+                             required="true"></div>
+                        <div form-input text="流畅HLS" ng-model="param.cloud.fluency_mu_url" placeholder="HLS(m3u8)"
+                             required="true"></div>
+                        <div form-input text="流畅FLV" ng-model="param.cloud.fluency_flv_url" placeholder="FLV"
+                             required="true"></div>
 
                         <div form-radio text="苹果审核标志" type="radio" ng-model="param.ios_audit" required="true"
                              default="2"
