--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -45,10 +45,10 @@
                              required="true"></div>
                         <div form-input text="视频来源" ng-model="param.record.video_url" placeholder="视频来源"
                              required="true"></div>
-                        <div form-input text="视频来源-高清版" ng-model="param.record.high_video_url" placeholder="视频来源-高清版"
-                             required="true"></div>
-                        <div form-input text="视频来源-流畅版" ng-model="param.record.fluent_video_url" placeholder="视频来源-流畅版"
-                             required="true"></div>
+                        <div form-input text="视频来源-高清版" ng-model="param.record.high_video_url"
+                             placeholder="视频来源-高清版"></div>
+                        <div form-input text="视频来源-流畅版" ng-model="param.record.fluent_video_url"
+                             placeholder="视频来源-流畅版"></div>
                         <div form-input text="视频宽度" ng-model="param.record.video_width" placeholder="视频宽度"
                              required="true"></div>
                         <div form-input text="视频高度" ng-model="param.record.video_height" placeholder="视频高度"
