--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -49,6 +49,14 @@
                              placeholder="视频来源-高清版"></div>
                         <div form-input text="视频来源-流畅版" ng-model="param.record.fluent_video_url"
                              placeholder="视频来源-流畅版"></div>
+
+                        <div form-input text="mp4-视频来源" ng-model="param.record.mp4_url" placeholder="视频来源"
+                             required="true"></div>
+                        <div form-input text="mp4-视频来源-高清版" ng-model="param.record.high_mp4_url"
+                             placeholder="视频来源-高清版"></div>
+                        <div form-input text="mp4-视频来源-流畅版" ng-model="param.record.fluency_mp4_url"
+                             placeholder="视频来源-流畅版"></div>
+
                         <div form-input text="视频宽度" ng-model="param.record.video_width" placeholder="视频宽度"
                              required="true"></div>
                         <div form-input text="视频高度" ng-model="param.record.video_height" placeholder="视频高度"
