--- a/app/scripts/views/biz/account/profile.html
+++ b/app/scripts/views/biz/account/profile.html
@@ -12,6 +12,7 @@
                              placeholder="账户ID" ng-disabled="true"></div>
                         <div form-input text="负责人账号" ng-model="param.username" placeholder="负责人账号"
                              required="true" ng-disabled="true"></div>
+                        <div form-input text="公司名称" ng-model="company_name" ng-disabled="true"></div>
                         <div form-input text="密码" ng-model="param.userpass" placeholder="初始化密码" ></div>
                         <div form-input text="手机号码" ng-model="param.mobile" min="11" max="11" placeholder="11位数字"
                              required="true"></div>
