--- a/app/scripts/views/biz/account/update.html
+++ b/app/scripts/views/biz/account/update.html
@@ -14,6 +14,7 @@
                              placeholder="账户ID" ng-disabled="$stateParams.account_id"></div>
                         <div form-input text="负责人账号" ng-model="param.username" placeholder="负责人账号"
                              required="true"></div>
+                        <div form-input text="公司名称" ng-model="param.company" required="true"></div>
                         <div form-input text="初始化密码" ng-model="userpass" placeholder="初始化密码"
                              ng-if="!$stateParams.account_id"></div>
                         <div form-input text="手机号码" ng-model="param.mobile" min="11" max="11" placeholder="11位数字"
