供应商后台管理！

--- a/app/scripts/views/biz/merchant/product.html
+++ b/app/scripts/views/biz/merchant/product.html
@@ -7,7 +7,7 @@
             <div class="panel panel-primary">
                 <div class="panel-body">
                     <h4>供应商信息</h4>
-                    <div form-search text="查询视频组ID" verify="verify_product_id(product_id)" btn-text="添加视频组"
+                    <div form-search text="查询活动ID" verify="verify_product_id(product_id)" btn-text="查询活动"
                          ajax-config="{method:'get',url:$root.common.domain+'/merchant/products/'+product_id}"
                          ng-model="product_id" callback="add_product_id(json)"></div>
 
