点播视频 复制功能！

--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="panel-body">
 
-                        <div form-input text="视频ID" ng-model="param.id" ng-show="$stateParams.id"
+                        <div form-input text="视频ID" ng-model="param.id" ng-show="param.id"
                              placeholder="视频ID" ng-disabled="$stateParams.id"></div>
 
                         <div form-input text="点播标题" ng-model="param.title" placeholder="视频标题,不超过30个字" required="true"
