--- a/app/scripts/views/biz/marketshare/update.html
+++ b/app/scripts/views/biz/marketshare/update.html
@@ -21,7 +21,7 @@
                              min="0"></div>
 
                         <div form-radio text="领取对象" ng-model="param.receive_type" required="true" default="0"
-                             source="[{text:'不限',value:'1'},{text:'新用户',value:'2'},{text:'老用户',value:'3'}]"
+                             source="[{text:'不限',value:'1'},{text:'新用户',value:'2'},{text:'老用户',value:'3'},{text:'手机号码列表',value:'4'}]"
                              source-api=""></div>
 
                         <div form-input text="运营文案" ng-model="param.content" placeholder="不超过15字" maxlength="15"></div>
