修复线上SKU问题

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -42,8 +42,8 @@
                              type="number"
                              source="[{text:'活动',value:'1'},{text:'测评',value:'2'},{text:'众筹',value:'3'},{text:'年卡',value:'4'},
                              {text:'会员',value:'5'},{text:'测试',value:'6'},{text:'其他',value:'7'},{text:'霸王团',value:'8'}
-                             ,{text:'课程',value:'9'},{text:'博物馆直播',value:'10'},{text:'名校直播',value:'11'},{text:'成人演讲',value:'12'}
-                             ,{text:'少年好声音',value:'13'},{text:'其他',value:'0'}]"
+                             ,{text:'课程',value:'9'},{text:'博物馆直播第一期',value:'10'},{text:'名校直播第一期',value:'11'},{text:'成人演讲',value:'12'}
+                             ,{text:'少年好声音',value:'13'},{text:'其他',value:'0'},{text:'博物馆直播第二期',value:'14'}]"
                              source-api=""></div>
                         <div form-radio text="活动类别" ng-model="param.act_type" required="true" default=""
                              source="[{text:'父母学堂',value:'父母学堂'},{text:'艺术',value:'艺术'},{text:'微课',value:'微课'},
