--- a/app/scripts/views/biz/record_rooms/update.html
+++ b/app/scripts/views/biz/record_rooms/update.html
@@ -30,8 +30,8 @@
                              required="true"></div>
 
                         <div form-radio text="订单类型" type="radio" ng-model="param.sku" required="true" default="10"
-                             source="[{text:'十万漫游',value:'10'},{text:'名校直播',value:'11'},{text:'成人演讲',value:'12'}
-                             ,{text:'少年好声音',value:'13'},{text:'免费',value:'0'}]" source-api=""></div>
+                             source="[{text:'博物馆直播第一期',value:'10'},{text:'名校直播第一期',value:'11'},{text:'成人演讲',value:'12'}
+                             ,{text:'少年好声音',value:'13'},{text:'博物馆直播第二期',value:'14'},{text:'免费',value:'0'}]" source-api=""></div>
 
                         <div form-input text="分享URl" ng-model="param.share_url" placeholder="分享URl"></div>
 
