--- a/app/scripts/views/live/notice/update.html
+++ b/app/scripts/views/live/notice/update.html
@@ -6,7 +6,7 @@
         <form class="form-horizontal" name="FormBody" novalidate>
             <div class="panel panel-primary">
                 <div class="panel-body">
-                    <div form-input text="公告标题" ng-model="param.title" required="true"></div>
+                    <div form-input text="公告标题" ng-model="param.title"></div>
                     <div form-textarea text="公告正文" ng-model="param.content" required="true"></div>
                 </div>
             </div>
