直播添加测评

--- a/app/scripts/views/biz/live_rooms/add_plan.html
+++ b/app/scripts/views/biz/live_rooms/add_plan.html
@@ -10,7 +10,7 @@
                     <div form-input text="活动ID" ng-model="param.activity_id" required="true"></div>
                     <div form-input text="测评ID" ng-model="param.plan_id" required="true"></div>
                     <div form-input text="查看答案有效时间" ng-model="param.show_result_time" required="true"
-                         type="number" placeholder="数字" min="0"></div>
+                         type="number" placeholder="填写数字,单位s" min="0"></div>
                 </div>
                 <div class="panel-body" ng-if="already_add">
                     <h2 class="text-danger text-center">删除测评</h2>
