--- a/app/scripts/views/directive/nav-top/nav-message.html
+++ b/app/scripts/views/directive/nav-top/nav-message.html
@@ -1,27 +1,40 @@
 <ul class="nav navbar-nav">
-    <li class="dropdown" dropdown="" on-toggle="toggled(open)">
-        <a class="dropdown-toggle" dropdown-toggle="" aria-haspopup="true" aria-expanded="false">
-            <span class="glyphicon glyphicon-envelope"></span>
-            <span class="badge badge-green">5</span>
+    <li class="dropdown" uib-dropdown="" on-toggle="toggled(open)"
+        ng-show="$root.common.expires_product&&$root.common.expires_product.total>0">
+        <a class="dropdown-toggle" uib-dropdown-toggle="" aria-haspopup="true" aria-expanded="false">
+            <span class="fa fa-flash"></span>&nbsp;&nbsp;过期商品提醒&nbsp;&nbsp;
+            <span class="badge badge-red"
+                  ng-bind="$root.common.expires_product&&$root.common.expires_product.total"></span>
         </a>
-        <ul class="dropdown-menu animated fadeIn">
-            <li class="messages-top text-center ng-binding"> You have 4 unread messages.</li>
-            <li class="dropdown-messages"><a href="#">
-                <div class="message-sender ng-binding"> Lucy Chandler</div>
-                <div class="message-header ng-binding"> Sent you a friend request.</div>
-            </a></li>
-            <li class="dropdown-messages"><a href="#">
-                <div class="message-sender ng-binding"> Diptesh Mishra</div>
-                <div class="message-header ng-binding"> Asked you to join StrapUI.</div>
-            </a></li>
-            <li class="dropdown-messages"><a href="#">
-                <div class="message-sender ng-binding"> Wang Xiao</div>
-                <div class="message-header ng-binding"> Congratulations! your account is activated.</div>
-            </a></li>
-            <li class="dropdown-messages"><a href="#">
-                <div class="message-sender ng-binding"> Jade Mullick</div>
-                <div class="message-header ng-binding"> Let's have a meeting at 5:00pm.</div>
-            </a></li>
+        <ul class="dropdown-menu animated fadeIn" uib-dropdown-menu>
+            <li class="messages-top text-center">
+                有 {{$root.common.expires_product&&$root.common.expires_product.total}} 个商品即将过期.
+            </li>
+            <li class="dropdown-messages" ng-repeat="obj in $root.common.expires_product.data">
+                <a ui-sref="main.act.update({product_id:{{obj.product_id}}})">
+                    <div class="message-sender"> 商品ID {{obj.product_id}}</div>
+                    <div class="message-header"> 标题: {{obj.title}}</div>
+                </a>
+            </li>
+        </ul>
+    </li>
+    <li class="dropdown" uib-dropdown="" on-toggle="toggled(open)"
+        ng-show="$root.common.expires_product&&$root.common.inventories_product.total>0">
+        <a class="dropdown-toggle" uib-dropdown-toggle="" aria-haspopup="true" aria-expanded="false">
+            <span class="fa fa-flash"></span>&nbsp;&nbsp;库存不足提醒&nbsp;&nbsp;
+            <span class="badge badge-red"
+                  ng-bind="$root.common.expires_product&&$root.common.inventories_product.total"></span>
+        </a>
+        <ul class="dropdown-menu animated fadeIn" uib-dropdown-menu>
+            <li class="messages-top text-center">
+                有 {{$root.common.expires_product&&$root.common.expires_product.total}} 个商品库存不足.
+            </li>
+            <li class="dropdown-messages" ng-repeat="obj in $root.common.expires_product.data">
+                <a ui-sref="main.act.update({product_id:{{obj.product_id}}})">
+                    <div class="message-sender"> 商品ID {{obj.product_id}}</div>
+                    <div class="message-header"> 标题: {{obj.title}}</div>
+                </a>
+            </li>
         </ul>
     </li>
 </ul>
